docs: README 补充 JDK 17/21 兼容性说明